added respond library for IE

--- a/public/sass/lib/_core.scss
+++ b/public/sass/lib/_core.scss
@@ -41,3 +41,4 @@
 @import "helpers/buttons";
 @import "helpers/classes";
 @import "helpers/flash_messages"; //For rails applications
+@import "helpers/background_images";
