--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,9 @@
 		%title 
 			= @title || 'Compass Framework'
 		%link{:rel => "stylesheet", :href => "/stylesheets/style.css", :type => "text/css", :media => "all"}
+		%script{:src => "/js/jquery-1.6.4.min.js"}
 		%script{:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
+		%script{:src => "/js/respond.js"}
 		%meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
 	%body
 		.container
